# chat-gui

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.json  config.toml
chat-gui/: app.py
