[tool.poetry]
name = "chat-gui"
version = "0.1.0"
description = ""
authors = ["K. Jonathan Klüser <jonathan.klueser@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.31.1"
openai = "^1.13.3"
st-copy-to-clipboard = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
